--- a/EndlessDualBootEFIConfig/EndlessDualBootEFIConfig.vcxproj.filters
+++ b/EndlessDualBootEFIConfig/EndlessDualBootEFIConfig.vcxproj.filters
@@ -15,9 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <Text Include="ReadMe.txt" />
-  </ItemGroup>
-  <ItemGroup>
     <ClInclude Include="stdafx.h">
       <Filter>Header Files</Filter>
     </ClInclude>
@@ -47,5 +44,8 @@
     <ClCompile Include="drive.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="..\README.md" />
   </ItemGroup>
 </Project>
